add otp verification

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/express-session": "^1.18.0",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.7.3",
+    "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.11.10",
     "@types/sequelize": "^4.28.20",
     "@types/uuid": "^10.0.0",
@@ -30,6 +31,7 @@
     "express-session": "^1.18.0",
     "mailgen": "^2.0.28",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
     "pg": "^8.13.0",
