--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "nodemon": "^3.1.7",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
+    "redux-persist": "^6.0.0",
     "sequelize": "^6.37.3",
     "sequelize-typescript": "^2.1.6",
     "sqlite3": "^5.1.7",
