--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
@@ -46,6 +47,7 @@
     "nodemon": "^3.1.7",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
+    "razorpay": "^2.9.4",
     "redux-persist": "^6.0.0",
     "sequelize": "^6.37.3",
     "sequelize-typescript": "^2.1.6",
