--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "sequelize": "^6.37.3",
     "sequelize-typescript": "^2.1.6",
     "sqlite3": "^5.1.7",
+    "stripe": "^17.2.1",
     "uuid": "^10.0.0"
   }
 }
