--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "redux-persist": "^6.0.0",
     "sequelize": "^6.37.3",
     "sequelize-typescript": "^2.1.6",
+    "socket.io": "^4.8.1",
     "sqlite3": "^5.1.7",
     "stripe": "^17.2.1",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "webrtc": "^1.14.1"
   }
 }
